--- a/new_parcel.html
+++ b/new_parcel.html
@@ -66,7 +66,7 @@
 							</a>
 						</li>
 						<li class="menu-item">
-							<a href="new_parcel.html">
+							<a href="#prohibited_items_popup" class="button_filter">
 								<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M20.8894 6.88849C20.9185 6.87198 20.9425 6.84834 20.9593 6.81993C20.976 6.79152 20.9848 6.75932 20.9848 6.72656C20.9848 6.69379 20.976 6.6616 20.9593 6.63318C20.9425 6.60477 20.9185 6.58113 20.8894 6.56462L13.5462 2.40534C13.0763 2.13983 12.5428 2 11.9998 2C11.4567 2 10.9232 2.13983 10.4534 2.40534L3.11154 6.56462C3.08251 6.58113 3.05843 6.60477 3.04169 6.63318C3.02495 6.6616 3.01614 6.69379 3.01614 6.72656C3.01614 6.75932 3.02495 6.79152 3.04169 6.81993C3.05843 6.84834 3.08251 6.87198 3.11154 6.88849L11.9038 11.9308C11.9334 11.9478 11.9671 11.9567 12.0014 11.9567C12.0358 11.9567 12.0695 11.9478 12.099 11.9308L20.8894 6.88849Z" fill="#2361A9"/>
 									<path d="M2.28847 8.16384C2.25914 8.14733 2.22586 8.13866 2.192 8.13872C2.15814 8.13877 2.12489 8.14754 2.09562 8.16414C2.06634 8.18074 2.04209 8.20458 2.0253 8.23325C2.00851 8.26192 1.99978 8.2944 2 8.32741V16.4777C2.00073 16.8705 2.10691 17.2562 2.30799 17.5965C2.50907 17.9369 2.79804 18.22 3.14616 18.4177L10.9423 22.9749C10.9715 22.9913 11.0047 23 11.0384 23C11.0722 23 11.1053 22.9914 11.1345 22.9749C11.1638 22.9585 11.188 22.9349 11.2049 22.9064C11.2218 22.8779 11.2307 22.8456 11.2308 22.8127V13.3566C11.2307 13.3237 11.2218 13.2914 11.205 13.263C11.1881 13.2345 11.1638 13.2109 11.1346 13.1944L2.28847 8.16384Z" fill="#2361A9"/>
@@ -406,6 +406,21 @@
 		</label>
 	</form>
 </div>
+
+
+<form action="" class="prohibited_items_popup white-popup-block mfp-hide" id="prohibited_items_popup">
+	<div class="main_img">
+		<img src="img/prohibited_items.png" alt="">
+	</div>
+	<div class="flex_btn">
+		<a href="#" class="close_popup white_btn">
+			Cancel
+		</a>
+		<a href="new_parcel.html" class="white_btn">
+			Agree
+		</a>
+	</div>
+</form>
 	
 
 
@@ -800,20 +815,17 @@
 							<div class="form-flex-wrap">
 								<div class="form-flex d-flex ai">
 									<div class="form-row flex_direct">
+										<label for="" class="label">Country</label>
+										<select name="country" id="" class="country_select">
+											<option value=""></option>
+										</select>
+									</div>
+									<div class="form-row flex_direct">
 										<label for="" class="label">Address Lookup</label>
 										<select name="address_lookup" id="" class="select" autocomplete="off">
 											<option value="" selected disabled>Address</option>
 											<option value="Ukraine">Ukraine</option>
 											<option value="Ukraine">Ukraine</option>
-										</select>
-										<!-- <div class="input address-lookup d-flex ai jc">
-											
-										</div> -->
-									</div>
-									<div class="form-row flex_direct">
-										<label for="" class="label">Country</label>
-										<select name="country" id="" class="country_select">
-											<option value=""></option>
 										</select>
 									</div>
 								</div>
@@ -969,15 +981,15 @@
 						</div>
 						<div class="section-sub-menu parcel-content bb">
 							<table class="parcel-content-table">
-								<tbody>
-								  	<tr>
+									<tr>
 								    	<th class="parcel-padding h4">GROUP NAME</th>
 								    	<th class="parcel-padding h4">QUANTITIES</th>
 								    	<th class="parcel-padding h4">value</th>
 								    	<th class="parcel-padding h4"></th>
 								    	<th class="parcel-padding h4"></th>
 								  	</tr>
-								  	<tr>
+								<tbody class="parcel_all_goods">
+								  	<tr class="goods_row">
 								    	<td class="parcel-padding">
 								    		<select name="spares_select" id="" class="select select_not_valid">
 								    			<option value="" selected disabled>Запчастини для авто</option>
@@ -1003,9 +1015,9 @@
 								    			<option>EU</option>
 								    		</select>
 								    	</td>
-								    	<td class="parcel-padding end"><a href="" class="basket"><img  src="img/basket.svg" alt=""></a></td>
+								    	<td class="parcel-padding end delete_goods"><a href="" class="basket"><img  src="img/basket.svg" alt=""></a></td>
 								  	</tr>
-								  	<tr>
+								  	<tr class="goods_row">
 								    	<td class="parcel-padding">
 								    		<select name="spares_select" id="" class="select select_not_valid">
 								    			<option>Запчастини для авто</option>
@@ -1030,9 +1042,9 @@
 								    			<option>EU</option>
 								    		</select>
 								    	</td>
-								    	<td class="parcel-padding end"><a href="" class="basket"><img  src="img/basket.svg" alt=""></a></td>
+								    	<td class="parcel-padding end delete_goods"><a href="" class="basket"><img  src="img/basket.svg" alt=""></a></td>
 								  	</tr>
-								  	<tr>
+								  	<tr class="goods_row">
 								    	<td class="parcel-padding">
 								    		<select name="group_name" id="" class="select select_not_valid">
 								    			<option>Запчастини для авто</option>
@@ -1057,9 +1069,9 @@
 								    			<option>EU</option>
 								    		</select>
 								    	</td>
-								    	<td class="parcel-padding end"><a href="" class="basket"><img  src="img/basket.svg" alt=""></a></td>
+								    	<td class="parcel-padding end delete_goods"><a href="" class="basket"><img  src="img/basket.svg" alt=""></a></td>
 								  	</tr>
-								  	<tr>
+								  	<tr class="goods_row">
 								    	<td class="parcel-padding br">
 								    		<select name="group_name" id="" class="select select_not_valid">
 								    			<option>Запчастини для авто</option>
@@ -1084,23 +1096,19 @@
 								    			<option>EU</option>
 								    		</select>
 								    	</td>
-								    	<td class="parcel-padding end"><a href="" class="basket"><img  src="img/basket.svg" alt=""></a></td>
+								    	<td class="parcel-padding end delete_goods"><a href="" class="basket"><img  src="img/basket.svg" alt=""></a></td>
 								  	</tr>
-								  	<tr>
+							  	</tbody>
+							  		<tr class="">
 								  		<td class="parcel-padding br">
-								  			<a class="add_new_item">
+								  			<a class="add_new_item add_new_item_click">
 								  				<svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path d="M14 2.625C7.72789 2.625 2.625 7.72789 2.625 14C2.625 20.2721 7.72789 25.375 14 25.375C20.2721 25.375 25.375 20.2721 25.375 14C25.375 7.72789 20.2721 2.625 14 2.625ZM18.375 14.875H14.875V18.375C14.875 18.6071 14.7828 18.8296 14.6187 18.9937C14.4546 19.1578 14.2321 19.25 14 19.25C13.7679 19.25 13.5454 19.1578 13.3813 18.9937C13.2172 18.8296 13.125 18.6071 13.125 18.375V14.875H9.625C9.39294 14.875 9.17038 14.7828 9.00628 14.6187C8.84219 14.4546 8.75 14.2321 8.75 14C8.75 13.7679 8.84219 13.5454 9.00628 13.3813C9.17038 13.2172 9.39294 13.125 9.625 13.125H13.125V9.625C13.125 9.39294 13.2172 9.17038 13.3813 9.00628C13.5454 8.84219 13.7679 8.75 14 8.75C14.2321 8.75 14.4546 8.84219 14.6187 9.00628C14.7828 9.17038 14.875 9.39294 14.875 9.625V13.125H18.375C18.6071 13.125 18.8296 13.2172 18.9937 13.3813C19.1578 13.5454 19.25 13.7679 19.25 14C19.25 14.2321 19.1578 14.4546 18.9937 14.6187C18.8296 14.7828 18.6071 14.875 18.375 14.875Z" fill="#2361A9"/>
 												</svg>
 												<p>Add new item</p>
 											</a>
 								  		</td>
-								  		<td class="parcel-padding br"></td>
-								  		<td></td>
-								  		<td></td>
-								  		<td></td>
 								  	</tr>
-							  	</tbody>
 							</table>
 							<div class="mobile-parcel-content-table">
 								<div class="item-parcel-cont-quant">
