--- a/new_parcel.html
+++ b/new_parcel.html
@@ -1112,9 +1112,13 @@
 								  				<svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path d="M14 2.625C7.72789 2.625 2.625 7.72789 2.625 14C2.625 20.2721 7.72789 25.375 14 25.375C20.2721 25.375 25.375 20.2721 25.375 14C25.375 7.72789 20.2721 2.625 14 2.625ZM18.375 14.875H14.875V18.375C14.875 18.6071 14.7828 18.8296 14.6187 18.9937C14.4546 19.1578 14.2321 19.25 14 19.25C13.7679 19.25 13.5454 19.1578 13.3813 18.9937C13.2172 18.8296 13.125 18.6071 13.125 18.375V14.875H9.625C9.39294 14.875 9.17038 14.7828 9.00628 14.6187C8.84219 14.4546 8.75 14.2321 8.75 14C8.75 13.7679 8.84219 13.5454 9.00628 13.3813C9.17038 13.2172 9.39294 13.125 9.625 13.125H13.125V9.625C13.125 9.39294 13.2172 9.17038 13.3813 9.00628C13.5454 8.84219 13.7679 8.75 14 8.75C14.2321 8.75 14.4546 8.84219 14.6187 9.00628C14.7828 9.17038 14.875 9.39294 14.875 9.625V13.125H18.375C18.6071 13.125 18.8296 13.2172 18.9937 13.3813C19.1578 13.5454 19.25 13.7679 19.25 14C19.25 14.2321 19.1578 14.4546 18.9937 14.6187C18.8296 14.7828 18.6071 14.875 18.375 14.875Z" fill="#2361A9"/>
 												</svg>
-												<p>Add new item</p>
+												<span>Add new item</span>
 											</a>
 								  		</td>
+								  		<td></td>
+								  		<td></td>
+								  		<td></td>
+								  		<td></td>
 								  	</tr>
 							</table>
 							<div class="mobile-parcel-content-table">
@@ -1123,14 +1127,15 @@
 										<div class="l_col">
 											<p class="p-cont-name">GROUP NAME</p>
 											<select name="spares_select" id="" class="select select_not_valid">
-								    			<option>Запчастини для авто</option>
-								    			<option>Запчастини для авто</option>
-								    			<option>Запчастини для авто</option>
+								    			<option value="" selected disabled>Запчастини для авто</option>
+												<option value="Запчастини">Запчастини</option>
+												<option value="бампер">бампер</option>
+												<option value="гайки">гайки</option>
 								    		</select>
 											<!-- <span class="p-cont-subname">Auto, Moto & bicycle spare parts</span>  -->
 										</div>
 										<div class="r_col">
-											<a href="" class="basket"><img src="img/basket.svg" alt=""></a>
+											<a href="" class="basket delete_item_parcel"><img src="img/basket.svg" alt=""></a>
 										</div>
 									</div>
 									<div class="sect middle d-flex ai jc">
@@ -1149,9 +1154,9 @@
 										</div>
 										<div class="r_col currency_col">
 											<select name="currency" id="" class="currency select select_not_valid">
-								    			<option>USD</option>
-								    			<option>UA</option>
-								    			<option>EU</option>
+								    			<option value="USD">USD</option>
+								    			<option value="UA">UA</option>
+								    			<option value="EU">EU</option>
 								    		</select>
 										</div>
 									</div>
@@ -1161,14 +1166,15 @@
 										<div class="l_col">
 											<p class="p-cont-name">GROUP NAME</p>
 											<select name="spares_select" id="" class="select select_not_valid">
-								    			<option>Запчастини для авто</option>
-								    			<option>Запчастини для авто</option>
-								    			<option>Запчастини для авто</option>
+								    			<option value="" selected disabled>Запчастини для авто</option>
+												<option value="Запчастини">Запчастини</option>
+												<option value="бампер">бампер</option>
+												<option value="гайки">гайки</option>
 								    		</select>
 											<!-- <span class="p-cont-subname">Auto, Moto & bicycle spare parts</span>  -->
 										</div>
 										<div class="r_col">
-											<a href="" class="basket"><img src="img/basket.svg" alt=""></a>
+											<a href="" class="basket delete_item_parcel"><img src="img/basket.svg" alt=""></a>
 										</div>
 									</div>
 									<div class="sect middle d-flex ai jc">
@@ -1187,20 +1193,20 @@
 										</div>
 										<div class="r_col currency_col">
 											<select name="currency" id="" class="currency select select_not_valid">
-								    			<option>USD</option>
-								    			<option>UA</option>
-								    			<option>EU</option>
+								    			<option value="USD">USD</option>
+								    			<option value="UA">UA</option>
+								    			<option value="EU">EU</option>
 								    		</select>
 										</div>
 									</div>
 								</div>
-								<a class="add-new-item mobile">
-									<svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M14 2.625C7.72789 2.625 2.625 7.72789 2.625 14C2.625 20.2721 7.72789 25.375 14 25.375C20.2721 25.375 25.375 20.2721 25.375 14C25.375 7.72789 20.2721 2.625 14 2.625ZM18.375 14.875H14.875V18.375C14.875 18.6071 14.7828 18.8296 14.6187 18.9937C14.4546 19.1578 14.2321 19.25 14 19.25C13.7679 19.25 13.5454 19.1578 13.3813 18.9937C13.2172 18.8296 13.125 18.6071 13.125 18.375V14.875H9.625C9.39294 14.875 9.17038 14.7828 9.00628 14.6187C8.84219 14.4546 8.75 14.2321 8.75 14C8.75 13.7679 8.84219 13.5454 9.00628 13.3813C9.17038 13.2172 9.39294 13.125 9.625 13.125H13.125V9.625C13.125 9.39294 13.2172 9.17038 13.3813 9.00628C13.5454 8.84219 13.7679 8.75 14 8.75C14.2321 8.75 14.4546 8.84219 14.6187 9.00628C14.7828 9.17038 14.875 9.39294 14.875 9.625V13.125H18.375C18.6071 13.125 18.8296 13.2172 18.9937 13.3813C19.1578 13.5454 19.25 13.7679 19.25 14C19.25 14.2321 19.1578 14.4546 18.9937 14.6187C18.8296 14.7828 18.6071 14.875 18.375 14.875Z" fill="#fff"/>
-									</svg>
-									<p>Add new item</p>
-								</a>
 							</div>
+							<a class="add-new-item mobile add_new_item_mobile">
+								<svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M14 2.625C7.72789 2.625 2.625 7.72789 2.625 14C2.625 20.2721 7.72789 25.375 14 25.375C20.2721 25.375 25.375 20.2721 25.375 14C25.375 7.72789 20.2721 2.625 14 2.625ZM18.375 14.875H14.875V18.375C14.875 18.6071 14.7828 18.8296 14.6187 18.9937C14.4546 19.1578 14.2321 19.25 14 19.25C13.7679 19.25 13.5454 19.1578 13.3813 18.9937C13.2172 18.8296 13.125 18.6071 13.125 18.375V14.875H9.625C9.39294 14.875 9.17038 14.7828 9.00628 14.6187C8.84219 14.4546 8.75 14.2321 8.75 14C8.75 13.7679 8.84219 13.5454 9.00628 13.3813C9.17038 13.2172 9.39294 13.125 9.625 13.125H13.125V9.625C13.125 9.39294 13.2172 9.17038 13.3813 9.00628C13.5454 8.84219 13.7679 8.75 14 8.75C14.2321 8.75 14.4546 8.84219 14.6187 9.00628C14.7828 9.17038 14.875 9.39294 14.875 9.625V13.125H18.375C18.6071 13.125 18.8296 13.2172 18.9937 13.3813C19.1578 13.5454 19.25 13.7679 19.25 14C19.25 14.2321 19.1578 14.4546 18.9937 14.6187C18.8296 14.7828 18.6071 14.875 18.375 14.875Z" fill="#fff"/>
+								</svg>
+								<span>Add new item</span>
+							</a>
 							<form class="form-flex-wrap form_parcel_content" autocomplete="off">
 								<div class="form-flex d-flex ai">
 									<div class="form-row">
